[gd_scene load_steps=16 format=2]

[ext_resource path="res://ParallaxBeach.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/LineEditTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/nine_slice_ui.png" type="Texture" id=3]
[ext_resource path="res://Fonts/CutePAFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/LoginButton.gd" type="Script" id=5]
[ext_resource path="res://UI/nine_slice_ui_hover.png" type="Texture" id=6]
[ext_resource path="res://UI/nine_slice_ui_pressed.png" type="Texture" id=7]
[ext_resource path="res://ParallaxBeachNight.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 15, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 6.0
expand_margin_left = 2.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 15, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 15, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 15, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 6.0

[node name="Title" type="Node2D"]

[node name="ParallaxBackgroundNight" parent="." instance=ExtResource( 8 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="LineEditUsername" type="LineEdit" parent="."]
margin_left = 246.0
margin_top = 136.0
margin_right = 373.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
max_length = 50
placeholder_text = "Username"
placeholder_alpha = 0.2
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditPassword" type="LineEdit" parent="."]
margin_left = 246.0
margin_top = 172.0
margin_right = 373.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
max_length = 50
secret = true
placeholder_text = "Password"
placeholder_alpha = 0.2
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 258.0
margin_top = 212.0
margin_right = 365.0
margin_bottom = 237.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Login"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
